# click-app

./: README.md
{{cookiecutter.hyphenated}}/: README.md  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.hyphenated}}/tests/: test_{{cookiecutter.underscored}}.py
